<?xml version="1.0"?>
<package format="2">
  <name>gpd_simulation</name>
  <version>0.0.1</version>
  <description>Test grasp pose detection in simulation</description>

  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gpd_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/../../lib"
                gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models" />
  </export>
</package>
